@@ -10,6 +10,7 @@
       + static method fileno : int ($stream : Sys::IO::Stream);
       + static method eof : int ($stream : Sys::IO::Stream);
       + static method readline : mutable string ($stream : Sys::IO::FileStream);
+      + static method getc : int ($stream : Sys::IO::FileStream);
       
 0.486 2023-09-06
   [Bug Fix]
